src/components/CartTooltip/CartTooltip.module.scss
.container {
  width: 704px;
  max-height: 657px;
  padding: 32px 0 32px 32px;
  line-height: 150%;
  background: #eae4eecc;
  border-radius: 20px;
  backdrop-filter: blur(10px);

  .cards {
    position: relative;
    display: flex;
    flex-direction: column;
    row-gap: 16px;
    padding-right: 32px;
    max-height: 514px;
    margin-bottom: 24px;
    overflow-x: hidden;
  }

  .total {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    margin-right: 32px;
    column-gap: 32px;
  }

  a {
    padding: 16px 33px;
    color: var(--white-color);
    background-color: var(--green-color);
    font-weight: 500;
    line-height: 150%;
    border-radius: 12px;
    cursor: pointer;
    text-decoration: none;

    &:hover {
      background-color: #4da856;
    }
    &:active {
      background-color: #00680a;
    }
  }

  .price {
    color: var(--text-color);
    font-size: 24px;
  }
}

.cards::-webkit-scrollbar {
  width: 8px;
}

.cards::-webkit-scrollbar-track {
  background: transparent; 
}

.cards::-webkit-scrollbar-thumb {
  background-color: #fff;
  border-radius: 5px;

  &:hover {
    background-color: #a8a8a8;
    cursor: grab;
  }
}

@media screen and (max-width: 1250px) {
  .container {
    width: 600px;
  }
}

@media screen and (max-width: 1250px) {
  .container {
    width: 550px;
    padding: 15px 0 15px 15px;
    .cards,
    .total {
      padding-right: 15px;
    }
  }
}

@media screen and (max-width: 992px) {
  .container {
    .cards,
    .total {
      padding-right: 10px;
    }
  }
}
@media screen and (max-width: 768px) {
  .container {
    width: 490px;
    .cards {
      max-height: 430px;
      row-gap: 10px;
    }
  }
}

@media screen and (max-width: 550px) {
  .container {
    width: 400px;
    .cards {
      max-height: 380px;
    }
  }
}

@media screen and (max-width: 500px) {
  .container {
    width: 350px;
  }
  .container .cards {
    row-gap: 10px;
  }
}
@media screen and (max-width: 430px) {
  .container {
    width: 330px;
  }
}
@media screen and (max-width: 380px) {
  .container {
    width: 280px;
    padding: 10px 0 10px 10px;
  }
  .container .cards {
    row-gap: 7px;
    max-height: 335px;
  }
}

@media (max-height: 820px) and (min-width: 769px) {
  .container {
    max-height: 600px;
    padding: 20px 0 20px 20px;
    .cards {
      max-height: 450px;
    }
  }
}

@media (max-height: 820px) and (max-width: 768px) {
  .container {
    .cards {
      max-height: 430px;
    }
  }
}
@media (max-height: 820px) and (max-width: 550px) {
  .container {
    .cards {
      max-height: 370px;
    }
  }
}
@media (max-height: 820px) and (max-width: 380px) {
  .container {
    .cards {
      max-height: 335px;
    }
  }
}

@media screen and (max-height: 730px) {
  .container {
    max-height: 500px;
    padding: 15px 0 15px 15px;
    .cards {
      row-gap: 10px;
      max-height: 387px;
      margin-bottom: 15px;
      > div {
        height: 122px;
      }
    }
  }
}

